<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<CheckBoxPreference android:key="saysomething"
		android:defaultValue="true" android:title="@string/preference_saymyname_title"
		android:summaryOn="@string/preference_saymyname_summaryOn"
		android:summaryOff="@string/preference_saymyname_summaryOff" />

	<CheckBoxPreference android:key="cutName"
		android:defaultValue="true" android:title="@string/preference_cutName_title"
		android:summaryOn="@string/preference_cutName_summaryOn"
		android:summaryOff="@string/preference_cutName_summaryOff" />

	<CheckBoxPreference android:key="cutNameAfterSpecialCharacters" 
		android:defaultValue="false" 
		android:summaryOff="@string/preference_cutNameAfterSpecialCharacter_summaryOff" 
		android:summaryOn="@string/preference_cutNameAfterSpecialCharacter_summaryOn" 
		android:title="@string/preference_cutNameAfterSpecialCharacter_title">
		</CheckBoxPreference>
		
	<EditTextPreference android:key="specialCharacters" 
		android:defaultValue=":/-(" 
		android:persistent="true" 
		android:title="@string/preference_specialCharacters_title" 
		android:summary="@string/preference_specialCharacters_summary">
		</EditTextPreference>
	
	<CheckBoxPreference android:key="readNumber"
		android:defaultValue="true" android:title="@string/preference_readNumber_title"
		android:summaryOn="@string/preference_readNumber_summaryOn"
		android:summaryOff="@string/preference_readNumber_summaryOff" />

	<CheckBoxPreference android:key="discreetMode"
		android:defaultValue="false" android:title="@string/preference_discreetMode_title"
		android:summaryOn="@string/preference_discreetMode_summaryOn"
		android:summaryOff="@string/preference_discreetMode_summaryOff" />

	<PreferenceCategory android:title="@string/preference_saycaller_title">
		<CheckBoxPreference android:key="saycaller"
			android:defaultValue="true" android:title="@string/preference_saycaller_title"
			android:summaryOn="@string/preference_saycaller_summaryOn"
			android:summaryOff="@string/preference_saycaller_summaryOff" />

		<PreferenceScreen android:title="@string/preference_saycaller_settings_title"
			android:summary="@string/preference_saycaller_settings_summary">
			<EditTextPreference android:key="callerRepeatSeconds"
				android:defaultValue="2" android:title="@string/preference_callerRepeatSeconds_title"
				android:summary="@string/preference_callerRepeatSeconds_summary"
				android:numeric="integer" android:persistent="true" />

			<EditTextPreference android:key="callerRepeatTimes"
				android:defaultValue="4" android:title="@string/preference_callerRepeatTimes_title"
				android:summary="@string/preference_callerRepeatTimes_summary"
				android:numeric="integer" android:persistent="true" />

			<EditTextPreference android:key="callerFormat"
				android:defaultValue="%" android:title="@string/preference_callerFormat_title"
				android:summary="@string/preference_callerFormat_summary"
				android:dialogTitle="@string/preference_callerFormat_title"
				android:dialogMessage="@string/preference_callerFormat_dialog" />
		</PreferenceScreen>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preference_saysms_title">
		<CheckBoxPreference android:key="saysms"
			android:defaultValue="true" android:title="@string/preference_saysms_title"
			android:summary="@string/preference_saysms_summary" />

		<PreferenceScreen android:title="@string/preference_saysms_settings_title"
			android:summary="@string/preference_saysms_settings_summary">
			<EditTextPreference android:key="smsReadDelay"
				android:defaultValue="2" android:title="@string/preference_smsReadDelay_title"
				android:summary="@string/preference_smsReadDelay_summary"
				android:numeric="integer" android:persistent="true" />

			<EditTextPreference android:key="smsFormat"
				android:defaultValue="%" android:title="@string/preference_smsFormat_title"
				android:summary="@string/preference_smsFormat_summary"
				android:dialogTitle="@string/preference_smsFormat_title"
				android:dialogMessage="@string/preference_smsFormat_dialog" />

			<CheckBoxPreference android:key="smsRead"
				android:title="@string/preference_smsRead_title" 
				android:summaryOn="@string/preference_smsRead_summaryOn"
				android:summaryOff="@string/preference_smsRead_summaryOff" />

			<EditTextPreference android:key="smsRepeatTimes"
				android:defaultValue="1" android:title="@string/preference_smsRepeatTimes_title"
				android:numeric="integer" android:summary="@string/preference_smsRepeatTimes_summary" />

			<CheckBoxPreference android:key="smsReadDiscreet"
				android:defaultValue="true" android:title="@string/preference_smsReadDiscreet_title"
				android:summaryOn="@string/preference_smsReadDiscreet_summaryOn"
				android:summaryOff="@string/preference_smsReadDiscreet_summaryOff" />
		</PreferenceScreen>
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/preference_sayemail_title">
		<CheckBoxPreference android:key="sayemail"
			android:defaultValue="true" android:title="@string/preference_sayemail_title"
			android:summary="@string/preference_sayemail_summary" />

		<PreferenceScreen android:title="@string/preference_sayemail_settings_title"
			android:summary="@string/preference_sayemail_settings_summary">
			
			<EditTextPreference android:key="emailReadDelay"
				android:defaultValue="2" android:title="@string/preference_emailReadDelay_title"
				android:summary="@string/preference_emailReadDelay_summary"
				android:numeric="integer" android:persistent="true" />
			
			<EditTextPreference android:key="emailFormat"
				android:defaultValue="%" android:title="@string/preference_emailFormat_title"
				android:summary="@string/preference_emailFormat_summary"
				android:dialogTitle="@string/preference_emailFormat_title"
				android:dialogMessage="@string/preference_emailFormat_dialog" />

			<CheckBoxPreference android:key="emailCutReFwd"
				android:title="@string/preference_emailCutReFwd_title" 
				android:summaryOn="@string/preference_emailCutReFwd_summaryOn"
				android:summaryOff="@string/preference_emailCutReFwd_summaryOff" />
				
			<CheckBoxPreference android:key="emailReadSubject"
				android:title="@string/preference_emailReadSubject_title" 
				android:summaryOn="@string/preference_emailReadSubject_summaryOn"
				android:summaryOff="@string/preference_emailReadSubject_summaryOff" />
				
			<EditTextPreference android:key="emailRepeatTimes"
				android:defaultValue="1" android:title="@string/preference_emailRepeatTimes_title"
				android:numeric="integer" android:summary="@string/preference_emailRepeatTimes_summary" />

			<CheckBoxPreference android:key="emailReadSubjectDiscreet"
				android:defaultValue="true" android:title="@string/preference_emailReadSubjectDiscreet_title"
				android:summaryOn="@string/preference_emailReadSubjectDiscreet_summaryOn"
				android:summaryOff="@string/preference_emailReadSubjectDiscreet_summaryOff" />
			
		</PreferenceScreen>
		
		<org.mailboxer.saymyname.DialogPreference
          android:key="emailHelp"
          android:title="@string/preference_emailHelp_title"
          android:summary="@string/preference_emailHelp_summary"
          
          android:dialogTitle="@string/preference_emailHelpDialog_title"
          android:dialogMessage="@string/preference_emailHelpDialog_text"
          android:negativeButtonText="@null" />
          
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preference_external_title">
		<CheckBoxPreference android:key="ringtone"
			android:title="@string/preference_ringtone_title" android:summary="@string/preference_ringtone_summary" />

		<Preference android:key="tts" android:title="@string/preference_tts_title" />

		<Preference android:key="ringdroid"
			android:title="@string/preference_ringdroid_title" android:summary="@string/preference_ringdroid_summary" />

		<Preference android:key="locale" android:title="@string/preference_locale_title"
			android:summary="@string/preference_locale_summary" />

		<Preference android:key="contactChooser"
			android:title="@string/preference_contactChooser_title"
			android:summary="@string/preference_contactChooser_summary" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preference_trouble_title">
		<Preference android:key="trouble" android:title="@string/preference_trouble_title"
			android:summary="@string/preference_trouble_summary" />

		<Preference android:key="translate"
			android:title="@string/preference_translate_title" android:summary="@string/preference_translate_summary" />

		<Preference android:key="blog" android:title="@string/preference_blog_title"
			android:summary="@string/preference_blog_summary" />

		<Preference android:key="donate" android:title="@string/preference_donate_title"
			android:summary="@string/preference_donate_summary" />
	</PreferenceCategory>


</PreferenceScreen>